CKA/Lab/set7/mybusybox.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-busybox
  name: my-busybox
spec:
  containers:
  - command:
    - sleep
    - "4800"
    image: busybox:1.13.1
    name: my-busybox
    resources: {}
  dnsPolicy: ClusterFirst
  nodeName: workernode02
  restartPolicy: Always
status: {}
