CKA/Lab/set7/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: web-deploy
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: web-pvc
          persistentVolumeClaim:
            claimName: web-pvc
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/tmp/web-data"
          name: web-pvc
